# metal_detector_msgs

./: CMakeLists.txt  README.md  package.xml
bags/: README.md
eletronics/: readme.md
eletronics/arduino_firmware/: detector_firm.ino
eletronics/arduino_firmware/detector_firm/: detector_firm.ino
eletronics/pcb/: Wykrywacz metali PI.brd  controle detc.brd  controle detc.sch  wykrywacz.sch
launch/: README.md  detector.launch
model/: readme.md
model/gazebo/: metal_detector.urdf.xacro  metal_detector_support.URDF
model/gazebo/meshes/: left_coil.STL  left_coil_support.STL  metal_detector_support.STL  right_coil.STL  right_coil_support.STL
model/solidworks/: Bobina TOP.SLDPRT  Bobina lateral.SLDPRT  Bobina.SLDPRT  BobinaBorda.SLDPRT  Detector.SLDASM  MontagemBobina.SLDASM  Readme.txt  Suporte-Dobradica.SLDPRT  Suportev5.SLDPRT
msg/: Coil.msg  Coil.msg~  Coils.msg~  README.md  SetCoilsZero.srv~
scripts/: arduino_node.py
srv/: SetCoilsZero.srv  SetCoilsZero.srv~
